<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Data:"
            android:textColor="#212121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="0"
                android:src="@drawable/calendario"
                android:id="@+id/dataimg" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/edtData"
                android:text="1/1/2015"
                android:focusable="false"
                android:editable="false"
                android:enabled="true"
                android:textSize="20sp"
                android:textColor="#727272"
                android:layout_marginLeft="20dp" />

            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/esportes_editData"
            android:textColor="#212121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_weight="1">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="0"
                android:src="@drawable/esportes"
                android:id="@+id/esportesimg" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtHorasEsportes"
                android:text="0"
                android:numeric="integer"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="20sp"
                android:focusable="false"
                android:clickable="false"
                android:textColor="#727272"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/horas_editData"
                android:layout_weight="1"
                android:textStyle="italic"
                android:textColor="#727272" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cardio_editData"
            android:textColor="#212121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="0"
                android:src="@drawable/cardio"
                android:id="@+id/cardioimg" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtHorasCardio"
                android:text="0"
                android:numeric="integer"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="20sp"
                android:focusable="false"
                android:clickable="false"
                android:textColor="#727272"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/horas_editData"
                android:layout_weight="1"
                android:textStyle="italic"
                android:textColor="#727272" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/musculacao_editData"
            android:textColor="#212121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="0"
                android:src="@drawable/musculacao"
                android:id="@+id/muscimg" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtHorasMusculacao"
                android:text="0"
                android:numeric="integer"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="20sp"
                android:focusable="false"
                android:clickable="false"
                android:textColor="#727272"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/horas_editData"
                android:layout_weight="1"
                android:textStyle="italic"
                android:textColor="#727272" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/total_editData"
            android:textColor="#212121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="0"
                android:src="@drawable/logo48"
                android:id="@+id/totalimg" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtHorasTotal"
                android:text="0"
                android:numeric="integer"
                android:layout_weight="1"
                android:inputType="number"
                android:focusable="false"
                android:editable="false"
                android:enabled="true"
                android:textSize="20sp"
                android:textColor="#727272"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/horas_editData"
                android:layout_weight="1"
                android:textStyle="italic"
                android:textColor="#727272" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:id="@+id/button1"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="run"
            android:background="#FF9800"
            android:textColor="#ffffff" />

    </LinearLayout>


</LinearLayout>